# codd

./: README.md  pyproject.toml
codd/: __init__.py  config.py
codd/cli/: __init__.py  __main__.py  eval_cmd.py  ops_cmd.py  repl_cmd.py
codd/data/: __init__.py  loader.py  (+2 more)
design/: date.md  iota.md  line-continuation.md  parser-executor.md  symbol-disambiguation.md  types.md
documents/: algebra.md  design-conversation.md
prototype/: README.md  pyproject.toml
prototype/design/: data-loading.md  parser-executor.md  scoping-and-multi-statement.md  summarize-auto-naming.md
prototype/prototype/: __init__.py  config.py
prototype/prototype/cli/: __init__.py  __main__.py  eval_cmd.py  ops_cmd.py  repl_cmd.py
prototype/prototype/data/: loader.py  sample.py  workspace.py
prototype/prototype/executor/: __init__.py  aggregates.py  environment.py  executor.py
prototype/prototype/lexer/: __init__.py  lexer.py  tokens.py
prototype/prototype/model/: __init__.py  relation.py  types.py
prototype/prototype/parser/: __init__.py  ast_nodes.py  parser.py
prototype/prototype/repl/: __init__.py  formatter.py  repl.py
prototype/tests/: test_aggregates.py  test_eval_cmd.py  test_executor.py  test_integration.py  test_lexer.py  test_loader.py  test_model.py  test_ops_cmd.py  test_parser.py  test_repl_commands.py  test_workspace.py
tests/: test_aggregates.py  test_coerce.py  test_continuation.py  test_eval_cmd.py  test_executor.py  test_integration.py  test_lexer.py  test_loader.py  test_model.py  test_ops_cmd.py  test_parser.py  test_repl_commands.py  test_workspace.py
(+17 files in other folders)
