[project]
name = "codd"
version = "1.5.19"
description = "Codd relational algebra: parser + executor"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
]

[project.scripts]
codd = "codd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
target-version = ["py312"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
